popular section added

--- a/index.html
+++ b/index.html
@@ -36,6 +36,51 @@
                 <button class="primary-btn"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
             </div>
         </section>
+        <section class="popular">
+            <div class="popular-content">
+                <h2 class="popular-title">
+                    Our Popular Tours
+                </h2>
+                <p class="popular-description">
+                    We have been very reputedly providing traveling service from one era .Our popular services are given
+                    below:
+                <ul>
+                    <li>Australia Tour: Australia Tour is very much popular in our whole services</li>
+                    <li>Usbekistan-Tajikistan Tour: For Reasonable budget , this is very popular service .</li>
+                    <li>Indonesia-Thailand Tour: For vast family tour , this is also so much attracted place in our
+                        clients.</li>
+                </ul>
+                We think we are doing our best not only by professionalism but also by honest passionate.
+                </p>
+                <button class="primary-btn">Read More</button>
+            </div>
+            <div>
+                <img class="popular-img" src="Images/Rectangle 4.png" alt="">
+            </div>
+        </section>
+        <section>
+            <h2 class="destination-title">Choose Your Destination
+            </h2>
+            <p class="destination-content">
+                Healing your body & refresh your mind by visiting your dream destination.
+            </p>
+            <div>
+                <div class="row">
+                    <img src="Images/Rectangle 5.png" alt="">
+                    <img src="Images/Rectangle 8.png" alt="">
+                </div>
+                <div class="row">
+                    <img src="Images/Rectangle 6.png" alt="">
+                    <img src="Images/Rectangle 7.png" alt="">
+                    <img src="Images/Rectangle 9.png" alt="">
+                </div>
+                <div class="row">
+                    <img src="Images/Rectangle 11.png" alt="">
+                    <img src="Images/Rectangle 10.png" alt="">
+                </div>
+
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
