newsletter section added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img class="popular-img" src="Images/Rectangle 4.png" alt="">
             </div>
         </section>
-        <section>
+        <section class="destination">
             <h2 class="destination-title">Choose Your Destination
             </h2>
             <p class="destination-content">
@@ -81,8 +81,73 @@
 
             </div>
         </section>
+        <section>
+            <div>
+                <h2 class="choose-title">
+                    Why Choose Us
+                </h2>
+                <p class="choose-description">
+                    Our service quality is maintain best service & availability .
+                </p>
+            </div>
+            <div class="choose">
+                <div class="choose1">
+                    <i class="fa-solid fa-hotel hotel"></i>
+                    <h3 class="choose1-title">Handpicked Hotels</h3>
+                    <p class="choose1-description">This is a 5 star hotel . Everybody can better for best service</p>
+                </div>
+                <div class="choose1">
+                    <img class="hotel" src="Images/choose2.png" alt="">
+                    <h3 class="choose1-title">World Class Service</h3>
+                    <p class="choose1-description">This is a 5 star hotel . Everybody can better for best service</p>
+                </div>
+                <div class="choose1">
+                    <img class="hotel" src="Images/choose3.png" alt="">
+                    <h3 class="choose1-title">Best Price Guarantee</h3>
+                    <p class="choose1-description">This is a 5 star hotel . Everybody can better for best service</p>
+                </div>
+            </div>
+
+
+        </section>
+        <section class="newsletter">
+            <div class="newsletter-content">
+                <h2 class="newsletter-title">Newsletter</h2>
+                <p class="newsletter-description">
+                    Get your daily dose of travel news & tips. Sign up today!
+                </p>
+                <input type="text" placeholder="Enter Your Name"> <br>
+                <input type="email" name="" id="" placeholder="Enter Your Email"><br>
+                <button class="primary-btn" type="submit">Subscribe</button>
+            </div>
+            <div class="newsletter-img">
+                <img src="Images/Rectangle 12.png" alt="">
+                <div class="discount">
+                    <h3 class="discount-title">
+                        Travelingeverywhere.com
+                    </h3>
+                    <p class="discount-offer">
+                        Save up to 70%
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-content">
+            <h3 class="footer-title">Traveling Everywhere</h3>
+            <p class="footer-description">
+                Traveling Everywhere is a globally renowned travel agency by ensuring great professionalism.
+            </p>
+            <div class="logo">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+            </div>
+
+        </div>
+    </footer>
 </body>
 
 </html>
