review section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+
+        <nav>
+            <h3 class="header-title"><img src="Images/Group 40071 (2).png" alt="">Traveling <span
+                    class="everywhere">Everywhere</span></h3>
+
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Packeges</a></li>
+                <li><a href="">testimonial</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section class="banner">
             <div class="banner-content">
@@ -64,25 +78,32 @@
             <p class="destination-content">
                 Healing your body & refresh your mind by visiting your dream destination.
             </p>
-            <div>
-                <div class="row">
+            <div class="">
+                <div class="row container">
                     <img src="Images/Rectangle 5.png" alt="">
+                    <div class="centered">Maldives</div>
                     <img src="Images/Rectangle 8.png" alt="">
+                    <div class="top-right"></div>
                 </div>
-                <div class="row">
+                <div class="row container">
                     <img src="Images/Rectangle 6.png" alt="">
+                    <div class="centered">Srilanka</div>
                     <img src="Images/Rectangle 7.png" alt="">
+                    <div class="centered"></div>
                     <img src="Images/Rectangle 9.png" alt="">
+                    <div class="centered"></div>
                 </div>
-                <div class="row">
+                <div class="row container">
                     <img src="Images/Rectangle 11.png" alt="">
+                    <div class="centered">Bangladesh</div>
                     <img src="Images/Rectangle 10.png" alt="">
+                    <div class="centered"></div>
                 </div>
 
             </div>
         </section>
-        <section>
-            <div>
+        <section class="choose">
+            <div class="choose-content">
                 <h2 class="choose-title">
                     Why Choose Us
                 </h2>
@@ -90,7 +111,7 @@
                     Our service quality is maintain best service & availability .
                 </p>
             </div>
-            <div class="choose">
+            <div class="choose10">
                 <div class="choose1">
                     <i class="fa-solid fa-hotel hotel"></i>
                     <h3 class="choose1-title">Handpicked Hotels</h3>
@@ -109,6 +130,15 @@
             </div>
 
 
+        </section>
+        <section class="review">
+            <div class="review-title">
+                <h2>10,000+ users of our agency <br> happy about our service</h2>
+                <p>Within 15,000 thousand customers , More than 80% happy about our services.</p>
+            </div>
+            <div>
+                <img src="Images/review.png" alt="">
+            </div>
         </section>
         <section class="newsletter">
             <div class="newsletter-content">
@@ -135,17 +165,21 @@
     </main>
     <footer>
         <div class="footer-content">
-            <h3 class="footer-title">Traveling Everywhere</h3>
+            <h3 class="footer-title"><img src="Images/Group 40071 (2).png" alt="">Traveling <span
+                    class="everywhere">Everywhere</span></h3>
             <p class="footer-description">
                 Traveling Everywhere is a globally renowned travel agency by ensuring great professionalism.
             </p>
             <div class="logo">
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-github"></i>
+                <a href=""><i class="fa-brands fa-twitter"></i></a>
+                <a href=""> <i class="fa-brands fa-facebook-f"></i></a>
+                <a href=""> <i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-github"></i></a>
             </div>
-
+            <br class="footer-br">
+            <p class="footer-reserve">
+                2024, All Rights Reserved.
+            </p>
         </div>
     </footer>
 </body>
